--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,11 @@ matplotlib>=3.6.0
 pandas>=1.5.0
 numpy>=1.24.0
 
+# Generación de reportes PDF
+reportlab>=4.0.0
+PyMuPDF>=1.23.0
+Pillow>=10.0.0
+
 # GUI adicional (opcional, para mejores widgets)
 # tkinter ya viene incluido con Python
 
